--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -46,19 +46,15 @@
                         <div class="c-pageHeader__main">
                             <h1 class="c-pageHeader__title">@BasicData.ProductCode @BasicData.FundName</h1>
                             <!-- 如果沒有tag，不要放 div.c-pageHeader__tags 區塊 -->
-                            @if (Model.TagsDic.Any())
+                            @if (Model.TagsDic[FundTagEnum.DiscountTag].Any())
                             {
                                 <div class="c-pageHeader__tags">
                                     <ul class="l-tag">
-                                        @foreach (var item in Model.TagsDic)
+                                        @foreach (var item in Model.TagsDic[FundTagEnum.DiscountTag])
                                         {
-                                            if (item.FundTagType == FundTagEnum.DiscountTag)
-                                            {
-                                                <li class="l-tag__item">
-
-                                                    <a href="#" class="o-tag">@item.FundTagTitle</a>
-                                                </li>
-                                            }
+                                            <li class="l-tag__item">
+                                                <a href="#" class="o-tag">@item.FundTagTitle</a>
+                                            </li>
                                         }
                                     </ul>
                                 </div>
@@ -424,20 +420,17 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -1380,20 +1373,17 @@
 
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -1681,20 +1671,17 @@
                     </div>
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -1785,20 +1772,17 @@
                 </div>
 
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -2353,20 +2337,17 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -2474,20 +2455,17 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -2540,20 +2518,17 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
