--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -45,18 +45,15 @@
                         <div class="c-pageHeader__main">
                             <h1 class="c-pageHeader__title">@BasicData.ProductCode @BasicData.FundName</h1>
                             <!-- 如果沒有tag，不要放 div.c-pageHeader__tags 區塊 -->
-                            @if (Model.TagsDic.Any())
+                            @if (Model.TagsDic[FundTagEnum.DiscountTag].Any())
                             {
                                 <div class="c-pageHeader__tags">
                                     <ul class="l-tag">
-                                        @foreach (var item in Model.TagsDic)
+                                        @foreach (var item in Model.TagsDic[FundTagEnum.DiscountTag])
                                         {
-                                            if (item.FundTagType == FundTagEnum.DiscountTag)
-                                            {
                                                 <li class="l-tag__item">
                                                     <a href="#" class="o-tag">@item.FundTagTitle</a>
                                                 </li>
-                                            }
                                         }
                                     </ul>
                                 </div>
@@ -426,20 +423,17 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
                                     <li class="l-divideList__item l-divideList__item--auto">
                                         <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
                                     </li>
-                                }
                             }
                         </ul>
                     </div>
@@ -1380,20 +1374,17 @@
 
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -1738,20 +1729,17 @@
                     </div>
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -1838,20 +1826,17 @@
                 </div>
 
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -2412,20 +2397,17 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -2533,20 +2515,17 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
@@ -2599,20 +2578,17 @@
                     }
                 </div>
             </section>
-            @if (Model.TagsDic.Any())
+            @if (Model.TagsDic[FundTagEnum.SortTag].Any())
             {
                 <div class="c-hashTags">
                     <div class="c-hashTags__title">Tags</div>
                     <div class="c-hashTags__content">
                         <ul class="l-divideList l-divideList--sm">
-                            @foreach (var item in Model.TagsDic)
+                            @foreach (var item in Model.TagsDic[FundTagEnum.SortTag])
                             {
-                                if (item.FundTagType == FundTagEnum.SortTag)
-                                {
-                                    <li class="l-divideList__item l-divideList__item--auto">
-                                        <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
-                                    </li>
-                                }
+                                <li class="l-divideList__item l-divideList__item--auto">
+                                    <a href="#" class="o-hashTag u-nowrap">#@item.FundTagTitle</a>
+                                </li>
                             }
                         </ul>
                     </div>
