--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/_FundReturnDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/_FundReturnDetail.cshtml
@@ -63,7 +63,7 @@
                 }
                 else
                 {
-                    paymentContent = string.Format("台端支付的基金申購手續費率為{0}%，其中本行收取不多於{0}%。",
+                    paymentContent = string.Format("台端支付的基金申購手續費率為{0}，其中本行收取不多於{0}。",
                     subscriptionFee);
                 }
             }
